--- a/teachers-pet-client/src/components/Login/Login.module.css
+++ b/teachers-pet-client/src/components/Login/Login.module.css
@@ -43,3 +43,13 @@
     color: #000000;
     width: 420px;
 }
+
+.input {
+    width: 300px;
+    height: 40px;
+    padding: 10px;
+    margin: 10px;
+    font-size: 1.2em;
+    border-radius: 25px;
+    border: 1px solid black;
+}
