--- a/teachers-pet-client/src/components/Login/Login.module.css
+++ b/teachers-pet-client/src/components/Login/Login.module.css
@@ -7,11 +7,6 @@
     margin-bottom: 30px;
 }
 
-.description {
-    font-size: 1.2em;
-    margin-bottom: 30px;
-}
-
 .logo {
     max-width: 450px;
 }
@@ -26,22 +21,15 @@
     border-radius: 25px;
 }
 
-.signUpButton {
+.loginButton {
     background-color: black;
     color: #ffffff;
 }
 
-.loginButton {
+.cancelButton {
     background-color: #ffffff;
     border-color: black;
     color: #000000;
-}
-
-.googleButton {
-    background-color: #ffffff;
-    border-color: black;
-    color: #000000;
-    width: 420px;
 }
 
 .input {
