--- a/teachers-pet-client/src/components/LandingPage/LandingPage.module.css
+++ b/teachers-pet-client/src/components/LandingPage/LandingPage.module.css
@@ -41,5 +41,6 @@
     background-color: #ffffff;
     border-color: black;
     color: #000000;
-    width: 420px;
+    width: 460px;
+    margin-left: 580px;
 }
